<resources>
    <string name="app_name">The Movie DB</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_email">Your email address</string>
    <string name="enter_your_password">Password (6 min characters)</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">JOIN THE COMMUNITY</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="enter_your_password_2">Repeat password</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_title">Title: {title}</string>
    <string name="overview_overview">Overview: {overview}</string>
    <string name="release_date">Release date: {releaseDate}</string>
</resources>
