<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="1dp"
    android:orientation="vertical"
    android:layout_marginVertical="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_title"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/release_date"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overviewTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/overview_overview"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</FrameLayout>
